Обновления mappers