@@ -3,36 +3,26 @@ package com.example.foodcontrol.mapper;
 import com.example.foodcontrol.dto.DayPlanDto;
 import com.example.foodcontrol.entity.DayPlan;
 import com.example.foodcontrol.entity.Meal;
-
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class DayPlanMapper {
+@Mapper(componentModel = "spring")
+public interface DayPlanMapper {
 
-    public static DayPlanDto toDto(DayPlan plan) {
+    @Mapping(target = "userId", source = "user.id")
+    @Mapping(target = "mealIds", source = "meals")
+    DayPlanDto toDto(DayPlan plan);
 
-        if (plan == null) {
-            return null;
+    default List<Long> mapMealsToIds(List<Meal> meals) {
+
+        if (meals == null) {
+        return Collections.emptyList();
         }
 
-        DayPlanDto dto = new DayPlanDto();
-
-        dto.setId(plan.getId());
-        dto.setDate(plan.getDate());
-
-        if (plan.getUser() != null) {
-            dto.setUserId(plan.getUser().getId());
-        }
-
-        if (plan.getMeals() != null) {
-            List<Long> mealIds = plan.getMeals()
-                    .stream()
-                    .map(Meal::getId)
-                    .collect(Collectors.toList());
-
-            dto.setMealIds(mealIds);
-        }
-
-        return dto;
+        return meals.stream()
+                .map(Meal::getId)
+                .toList();
     }
 }
